--- a/Frontend/src/app/create-consumable/create-consumable.component.html
+++ b/Frontend/src/app/create-consumable/create-consumable.component.html
@@ -1,13 +1,14 @@
 <div style="display: flex; justify-content: center; align-items: center;">
   <mat-card style="width: 600px; margin-top: 1%; align-items: center; ">
     <form [formGroup]="myForm" novalidate fxLayout="column wrap" fxLayoutAlign="center center" fxLayoutGap="10px"
-          (ngSubmit)="AddConsumable()">
+      (ngSubmit)="AddConsumable()">
       <mat-card-header>
         <mat-card-title style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%; text-align:center;">
           Create
           Consumable
           <mat-icon (click)="openCreateConTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
-                    style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
+            style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}"
+            matTooltip="Need help? Click me!"></mat-icon>
         </mat-card-title>
 
         <mat-card-subtitle>
@@ -18,8 +19,7 @@
                   <label style=" color:black;">Name:</label>
                   <br />
                   <mat-form-field>
-                    <input matInput type="text" placeholder="Water" formControlName="Name" id="Name"
-                           required>
+                    <input matInput type="text" placeholder="E.g. Water" formControlName="Name" id="Name" required>
                     <mat-hint align="end">Not more then 32 characters long.</mat-hint>
                     <mat-error *ngIf="myError('Name', 'required')">Name is required</mat-error>
                     <mat-error *ngIf="myError('Name', 'minlength')">
@@ -35,23 +35,6 @@
                 </mat-card-content>
               </td>
               <td style="width:100%;">
-                <!--<mat-card-content>
-                    <label style=" color: black;">Description:</label>
-                    <br />
-                    <mat-form-field>
-                        <textarea matInput type="text" placeholder="Still water"
-                            formControlName="Description" id="Surname" required></textarea>
-                        <mat-hint align="end">Not more then 50 characters long.</mat-hint>
-                        <mat-error *ngIf="myError('Description', 'required')">Description is
-                            required</mat-error>
-                        <mat-error *ngIf="myError('Description', 'minlength')">Description must be 3 to
-                            50 characters long</mat-error>
-                        <mat-error *ngIf="myError('Description', 'maxlength')">Limit exceed</mat-error>
-                        <mat-error *ngIf="myError('Description', 'pattern')">Description can not contain
-                            symbols</mat-error>
-
-                    </mat-form-field>
-                </mat-card-content>-->
                 <mat-card-content>
                   <label style=" color: black;">Category:</label>
                   <br />
@@ -59,7 +42,7 @@
                     <mat-label>Select</mat-label>
                     <mat-select formControlName="ConsumableCategory" required>
                       <mat-option *ngFor="let Category of consumableCategories"
-                                  [value]="Category.name">{{Category.name}}</mat-option>
+                        [value]="Category.name">{{Category.name}}</mat-option>
                     </mat-select>
                     <mat-error *ngIf="myError('ConsumableCategory', 'required')">
                       The Category is
@@ -73,27 +56,12 @@
             </tr>
             <tr>
               <td style="width:100%;">
-                <!--<mat-card-content>
-                    <label style=" color: black;">Category:</label>
-                    <br />
-                    <mat-form-field appearance="fill">
-                        <mat-label>Select</mat-label>
-                        <mat-select formControlName="ConsumableCategory" required>
-                            <mat-option *ngFor="let Category of consumableCategories"
-                                [value]="Category.name">{{Category.name}}</mat-option>
-                        </mat-select>
-                        <mat-error *ngIf="myError('ConsumableCategory', 'required')">The Category is
-                            required</mat-error>
-                    </mat-form-field>
-
-
-                </mat-card-content>-->
                 <mat-card-content>
                   <label style=" color:black;">Minimum Reorder Quantity:</label>
                   <br />
                   <mat-form-field>
-                    <input matInput type="number" placeholder=""
-                           formControlName="Minimum_Reorder_Quantity" id="Email" required>
+                    <input matInput type="number" placeholder="" formControlName="Minimum_Reorder_Quantity" id="Email"
+                      required>
                     <mat-error *ngIf="myError('Minimum_Reorder_Quantity', 'required')">
                       The minimum
                       amount is required
@@ -107,25 +75,12 @@
                 </mat-card-content>
               </td>
               <td style="width:100%;">
-                <!--<mat-card-content>
-                    <label style=" color:black;">Minimum Reorder Quantity:</label>
-                    <br />
-                    <mat-form-field>
-                        <input matInput type="number" placeholder=""
-                            formControlName="Minimum_Reorder_Quantity" id="Email" required>
-                        <mat-error *ngIf="myError('Minimum_Reorder_Quantity', 'required')">The minimum
-                            amount is required</mat-error>
-                        <mat-error *ngIf="myError('Minimum_Reorder_Quantity', 'pattern')">Value cannot
-                            be negative</mat-error>
-                    </mat-form-field>
-
-                </mat-card-content>-->
                 <mat-card-content>
                   <label style=" color:black;">Maximum Reorder Quantity:</label>
                   <br />
                   <mat-form-field>
-                    <input matInput type="number" placeholder=""
-                           formControlName="Maximum_Reorder_Quantity" id="Email" required>
+                    <input matInput type="number" placeholder="" formControlName="Maximum_Reorder_Quantity" id="Email"
+                      required>
                     <mat-error *ngIf="myError('Maximum_Reorder_Quantity', 'required')">
                       The Maximum
                       amount is required
@@ -140,24 +95,11 @@
             </tr>
             <tr>
               <td style="width:100%;">
-                <!--<mat-card-content>
-                    <label style=" color:black;">Maximum Reorder Quantity:</label>
-                    <br />
-                    <mat-form-field>
-                        <input matInput type="number" placeholder=""
-                            formControlName="Maximum_Reorder_Quantity" id="Email" required>
-                        <mat-error *ngIf="myError('Maximum_Reorder_Quantity', 'required')">The Maximum
-                            amount is required</mat-error>
-                        <mat-error *ngIf="myError('Maximum_Reorder_Quantity', 'pattern')">Value cannot
-                            be negative</mat-error>
-                    </mat-form-field>
-                </mat-card-content>-->
                 <mat-card-content>
                   <label style=" color:black;">On Hand:</label>
                   <br />
                   <mat-form-field>
-                    <input matInput type="number" placeholder="" formControlName="On_Hand"
-                           id="Email" required>
+                    <input matInput type="number" placeholder="" formControlName="On_Hand" id="Email" required>
                     <mat-error *ngIf="myError('On_Hand', 'required')">
                       The on hand
                       amount is required
@@ -178,8 +120,8 @@
                   <label style=" color: black;">Description:</label>
                   <br />
                   <mat-form-field style="width: 100%">
-                    <textarea matInput type="text" placeholder="Still water"
-                              formControlName="Description" id="Surname" required></textarea>
+                    <textarea matInput type="text" placeholder="E.g. Still water" formControlName="Description"
+                      id="Surname" required></textarea>
                     <mat-hint align="end">Not more then 50 characters long.</mat-hint>
                     <mat-error *ngIf="myError('Description', 'required')">
                       Description is
@@ -197,22 +139,6 @@
 
                   </mat-form-field>
                 </mat-card-content>
-                <!--<mat-card-content>
-                  <label style=" color:black;">On Hand:</label>
-                  <br />
-                  <mat-form-field>
-                    <input matInput type="number" placeholder="" formControlName="On_Hand"
-                           id="Email" required>
-                    <mat-error *ngIf="myError('On_Hand', 'required')">
-                      The on hand
-                      amount is required
-                    </mat-error>
-                    <mat-error *ngIf="myError('On_Hand', 'pattern')">
-                      Value cannot
-                      be negative
-                    </mat-error>
-                  </mat-form-field>
-                </mat-card-content>-->
               </td>
             </tr>
 
@@ -222,27 +148,23 @@
         </mat-card-subtitle>
       </mat-card-header>
       <mat-card-actions style="display: flex; justify-content: center; align-items: center; margin-top: 5%;">
-        <!--<button mat-raised-button type="submit"
-                style="width: 150px; font-size: 14px; height: 42px; margin: 10px;" [disabled]="!myForm.valid"
-                [ngStyle]="{'background-color': !myForm.valid ? 'rgba(148, 204, 91, 0.6)' : '#94CC5B','color': !myForm.valid ? 'rgba(255, 255, 255, 0.6)' : 'white'}">
-          Save
-        </button>-->
 
         <div class="wrapper">
           <button class="" id="AnimationBtn" type="submit" [disabled]="!myForm.valid">
             <span>Save</span>
             <div class="success">
               <svg xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 29.756 29.756"
-                   style="enable-background:new 0 0 29.756 29.756;" xml:space="preserve">
-              <path d="M29.049,5.009L28.19,4.151c-0.943-0.945-2.488-0.945-3.434,0L10.172,18.737l-5.175-5.173   c-0.943-0.944-2.489-0.944-3.432,0.001l-0.858,0.857c-0.943,0.944-0.943,2.489,0,3.433l7.744,7.752   c0.944,0.943,2.489,0.943,3.433,0L29.049,8.442C29.991,7.498,29.991,5.953,29.049,5.009z" />
-                            </svg>
+                style="enable-background:new 0 0 29.756 29.756;" xml:space="preserve">
+                <path
+                  d="M29.049,5.009L28.19,4.151c-0.943-0.945-2.488-0.945-3.434,0L10.172,18.737l-5.175-5.173   c-0.943-0.944-2.489-0.944-3.432,0.001l-0.858,0.857c-0.943,0.944-0.943,2.489,0,3.433l7.744,7.752   c0.944,0.943,2.489,0.943,3.433,0L29.049,8.442C29.991,7.498,29.991,5.953,29.049,5.009z" />
+              </svg>
             </div>
           </button>
         </div>
 
         <button mat-raised-button id="cBtn"
-                style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color: #244688; color: white; border: 3px solid #244688;"
-                (click)="Close()">
+          style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color: #244688; color: white; border: 3px solid #244688;"
+          (click)="Close()">
           Cancel
         </button>
       </mat-card-actions>
