Payment Made fix Grayed out read only Submit button disable/enable Admin validation fix Checkbox disable - Procurement details Delegation Checked flagged Notification popups Create Mandate Limit Validation + Notifications User Role Fix Branch & Department validation fixes

--- a/Frontend/src/app/finalize-procurement-request-create/finalize-procurement-request-create.component.html
+++ b/Frontend/src/app/finalize-procurement-request-create/finalize-procurement-request-create.component.html
@@ -19,7 +19,7 @@
                   <br />
                   <mat-form-field>
                     <input matInput type="text" placeholder="" formControlName="total" id="total"
-                      [(ngModel)]="TotalAmountDisplay" [readonly]="true">
+                      [(ngModel)]="TotalAmountDisplay" [readonly]="true" [disabled]="" (focus)="onFocus($event)" style="cursor: default">
                   </mat-form-field>
                 </mat-card-content>
               </td>
@@ -31,7 +31,7 @@
                   <br />
                   <mat-form-field>
                     <input matInput type="text" placeholder="" formControlName="budgetLine" id="budgetLine"
-                      [(ngModel)]="ActualAmountDisplay" [readonly]="true">
+                      [(ngModel)]="ActualAmountDisplay" [readonly]="true" [disabled]="" (focus)="onFocus($event)" style="cursor: default">
                   </mat-form-field>
                 </mat-card-content>
               </td>
