--- a/Frontend/src/app/Delegation/create-delegation/create-delegation.component.html
+++ b/Frontend/src/app/Delegation/create-delegation/create-delegation.component.html
@@ -18,7 +18,7 @@
                   <label style=" color:black;" for="DelegatingName">Delegating Party:</label>
                   <br />
                   <mat-form-field>
-                    <input matInput type="text" placeholder="" formControlName="DelegatingName" id="DelegatingName" [readonly]="true">
+                    <input matInput type="text" placeholder="" formControlName="DelegatingName" id="DelegatingName" [readonly]="true" [disabled]="" (focus)="onFocus($event)" style="cursor: default">
                   </mat-form-field>
                 </mat-card-content>
               </td>
@@ -29,7 +29,7 @@
                   <br />
                   <mat-form-field>
                     <input matInput type="text" placeholder="" [formControl]="myControl" id="DelegateName"
-                           [matAutocomplete]="auto" (blur)="checkUser()" required>
+                           [matAutocomplete]="auto" (blur)="checkUser()" style="cursor: pointer" required>
                     <mat-autocomplete #auto="matAutocomplete" (optionSelected)='getPosts($event.option.value)'>
                       <mat-option *ngFor="let u of SearchedOptions | async" [value]="u.username">
                         {{u.username}}
