--- a/Frontend/src/app/Notification-Hub/view-notification-hub/view-notification-hub.component.html
+++ b/Frontend/src/app/Notification-Hub/view-notification-hub/view-notification-hub.component.html
@@ -185,8 +185,12 @@
   <mat-tab-group backgroundColor="primary">
     <mat-tab label="My Notifications">
       <mat-tab-group>
-        <mat-tab label="Vendor">
+        <mat-tab>
+          <ng-template mat-tab-label>
 
+            Vendor
+            <mat-icon matBadge="{{numVenNoti}}" matBadgeColor="warn" [matBadgeHidden]="VenHidden"></mat-icon>
+          </ng-template>
           <table mat-table [dataSource]="dataSourceVendor" class="mat-elevation-z8" id="table" style="display: flex; justify-content: center; align-items: center;  background-color: #ffffff00; width: 800px;">
             <ng-container matColumnDef="id" style="width: 800px;">
               <!--<th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> No. </th>-->
@@ -225,8 +229,12 @@
 
         </mat-tab>
 
-        <mat-tab label="Inventory">
+        <mat-tab>
+          <ng-template mat-tab-label>
 
+            Inventory
+            <mat-icon matBadge="{{numInvNoti}}" matBadgeColor="warn" [matBadgeHidden]="InvHidden"></mat-icon>
+          </ng-template>
           <table mat-table [dataSource]="dataSourceInventory" class="mat-elevation-z8" id="table" style="display: flex; justify-content: center; align-items: center;  background-color: #ffffff00; width: 800px;">
             <ng-container matColumnDef="id" style="width: 800px;">
               <!--<th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> No. </th>-->
@@ -265,8 +273,12 @@
 
         </mat-tab>
 
-        <mat-tab label="Procurement">
+        <mat-tab>
+          <ng-template mat-tab-label>
 
+            Procurement
+            <mat-icon matBadge="{{numProNoti}}" matBadgeColor="warn" [matBadgeHidden]="ProHidden"></mat-icon>
+          </ng-template>
           <table mat-table [dataSource]="dataSourceProcurement" class="mat-elevation-z8" id="table" style="display: flex; justify-content: center; align-items: center;  background-color: #ffffff00; width: 800px;">
             <ng-container matColumnDef="id" style="width: 800px;">
               <!--<th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> No. </th>-->
@@ -305,8 +317,12 @@
 
         </mat-tab>
 
-        <mat-tab label="Delegation of Authority">
+        <mat-tab>
+          <ng-template mat-tab-label>
 
+            Delegation of Authority
+            <mat-icon matBadge="{{numDelNoti}}" matBadgeColor="warn" [matBadgeHidden]="DelHidden"></mat-icon>
+          </ng-template>
           <table mat-table [dataSource]="dataSourceDelegation" class="mat-elevation-z8" id="table" style="display: flex; justify-content: center; align-items: center;  background-color: #ffffff00; width: 800px;">
             <ng-container matColumnDef="id" style="width: 800px;">
               <!--<th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> No. </th>-->
@@ -332,11 +348,11 @@
 
                   </mat-card-content>
                   <!--<mat-card-actions style="display: flex; justify-content: end; align-items: end; margin-top: 5%;">
-                    <button mat-raised-button
-                            style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color: #244688; color: white; border: 3px solid #244688;" routerLink="/ViewConsumable">
-                      <mat-icon matPrefix style="margin-right:10%;">visibility</mat-icon>View
-                    </button>
-                  </mat-card-actions>-->
+            <button mat-raised-button
+                    style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color: #244688; color: white; border: 3px solid #244688;" routerLink="/ViewConsumable">
+              <mat-icon matPrefix style="margin-right:10%;">visibility</mat-icon>View
+            </button>
+          </mat-card-actions>-->
                 </mat-card>
               </td>
             </ng-container>
@@ -347,9 +363,20 @@
 
       </mat-tab-group>
     </mat-tab>
-    <mat-tab label="Delegating User Notifications">
+
+    <mat-tab>
+      <ng-template mat-tab-label>
+
+        Delegating User Notifications
+        <mat-icon matBadge="!" matBadgeColor="warn" [matBadgeHidden]="tempHidden"></mat-icon>
+      </ng-template>
       <mat-tab-group>
-        <mat-tab label="Vendor">
+        <mat-tab>
+          <ng-template mat-tab-label>
+
+            Vendor
+            <mat-icon matBadge="{{tempNumVenNoti}}" matBadgeColor="warn" [matBadgeHidden]="tempVenHidden"></mat-icon>
+          </ng-template>
 
           <table mat-table [dataSource]="dataSourceTempVendor" class="mat-elevation-z8" id="table" style="display: flex; justify-content: center; align-items: center;  background-color: #ffffff00; width: 800px;">
             <ng-container matColumnDef="id" style="width: 800px;">
@@ -389,8 +416,12 @@
 
         </mat-tab>
 
-        <mat-tab label="Inventory">
+        <mat-tab>
+          <ng-template mat-tab-label>
 
+            Inventory
+            <mat-icon matBadge="{{tempNumInvNoti}}" matBadgeColor="warn" [matBadgeHidden]="tempInvHidden"></mat-icon>
+          </ng-template>
           <table mat-table [dataSource]="dataSourceTempInventory" class="mat-elevation-z8" id="table" style="display: flex; justify-content: center; align-items: center;  background-color: #ffffff00; width: 800px;">
             <ng-container matColumnDef="id" style="width: 800px;">
               <!--<th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> No. </th>-->
@@ -429,8 +460,12 @@
 
         </mat-tab>
 
-        <mat-tab label="Procurement">
+        <mat-tab>
+          <ng-template mat-tab-label>
 
+            Procurement
+            <mat-icon matBadge="{{tempNumProNoti}}" matBadgeColor="warn" [matBadgeHidden]="tempProHidden"></mat-icon>
+          </ng-template>
           <table mat-table [dataSource]="dataSourceTempProcurement" class="mat-elevation-z8" id="table" style="display: flex; justify-content: center; align-items: center;  background-color: #ffffff00; width: 800px;">
             <ng-container matColumnDef="id" style="width: 800px;">
               <!--<th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> No. </th>-->
@@ -469,8 +504,12 @@
 
         </mat-tab>
 
-        <mat-tab label="Delegation of Authority">
+        <mat-tab>
+          <ng-template mat-tab-label>
 
+            Delegation of Authority
+            <mat-icon matBadge="{{tempNumDelNoti}}" matBadgeColor="warn" [matBadgeHidden]="tempDelHidden"></mat-icon>
+          </ng-template>
           <table mat-table [dataSource]="dataSourceTempDelegation" class="mat-elevation-z8" id="table" style="display: flex; justify-content: center; align-items: center;  background-color: #ffffff00; width: 800px;">
             <ng-container matColumnDef="id" style="width: 800px;">
               <!--<th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> No. </th>-->
@@ -496,11 +535,11 @@
 
                   </mat-card-content>
                   <!--<mat-card-actions style="display: flex; justify-content: end; align-items: end; margin-top: 5%;">
-                    <button mat-raised-button
-                            style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color: #244688; color: white; border: 3px solid #244688;" routerLink="/ViewConsumable">
-                      <mat-icon matPrefix style="margin-right:10%;">visibility</mat-icon>View
-                    </button>
-                  </mat-card-actions>-->
+                <button mat-raised-button
+                        style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color: #244688; color: white; border: 3px solid #244688;" routerLink="/ViewConsumable">
+                  <mat-icon matPrefix style="margin-right:10%;">visibility</mat-icon>View
+                </button>
+              </mat-card-actions>-->
                 </mat-card>
               </td>
             </ng-container>
