--- a/Frontend/src/app/edit-procurement-request/edit-procurement-request.component.html
+++ b/Frontend/src/app/edit-procurement-request/edit-procurement-request.component.html
@@ -46,7 +46,7 @@
                                     <br />
                                     <mat-form-field>
                                       <input matInput type="text" placeholder="" formControlName="VendorName"
-                                             id="VendorName" [(ngModel)]="Procurement_Request.vendor.name" readonly>
+                                             id="VendorName" [(ngModel)]="Procurement_Request.vendor.name" readonly [disabled]="" (focus)="onFocus($event)" style="cursor: default">
 
                                       <mat-hint align="end">Not more then 32 characters long.</mat-hint>
                                       <mat-error *ngIf="myError('VendorName', 'required')">
@@ -114,7 +114,7 @@
                                     <mat-form-field>
                                       <input matInput type="text" placeholder="" formControlName="Email"
                                              id="Surname" required [(ngModel)]="Procurement_Request.vendor.email"
-                                             readonly>
+                                             readonly [disabled]="" (focus)="onFocus($event)" style="cursor: default">
                                       <mat-error *ngIf="myError('Email', 'required')">
                                         Email is
                                         required
@@ -242,7 +242,7 @@
                                     <br />
                                     <mat-form-field>
                                       <input readonly matInput type="text" placeholder="" formControlName="Vendor"
-                                             id="Surname" [(ngModel)]="Procurement_Request.vendor.name" required>
+                                             id="Surname" [(ngModel)]="Procurement_Request.vendor.name" required [disabled]="" (focus)="onFocus($event)" style="cursor: default">
                                     </mat-form-field>
 
 
