Timer added,  delete category fix, OTP email fix

--- a/Frontend/src/app/view-audit-log/view-audit-log.component.html
+++ b/Frontend/src/app/view-audit-log/view-audit-log.component.html
@@ -25,6 +25,9 @@
                 <button class="MenuButton" mat-menu-item (click)="openRestoreDialog()"
                     matTooltip="This will allow you to restore the systems data with the backed-up file of your chosing">
                     Restore System</button>
+                <button class="MenuButton" mat-menu-item (click)="openTimerDialog()"
+                    matTooltip="This will allow you to adjust the timer used for OTP validation">
+                    Edit OTP Timer</button>
             </mat-menu>
         </mat-nav-list>
     </mat-sidenav>
