Search fixes, place procurement details fix

--- a/Frontend/src/app/Delegation/create-delegation/create-delegation.component.html
+++ b/Frontend/src/app/Delegation/create-delegation/create-delegation.component.html
@@ -75,7 +75,7 @@
                   <label style=" color:black;">Delegation Document:</label>
                   <br />
 
-                  <input type="file" id="file" placeholder="" formControlName="DelegationFile" style="border: solid #244688; border-radius: 5px; "
+                  <input type="file" id="file" placeholder="" formControlName="DelegationFile" style="border: solid #244688; border-radius: 5px; max-width: 247px;"
                          accept=".pdf" (change)="onFileUpload($event)" required>
 
                 </mat-card-content>
