--- a/Frontend/src/app/create-procurement-request/create-procurement-request.component.html
+++ b/Frontend/src/app/create-procurement-request/create-procurement-request.component.html
@@ -93,7 +93,7 @@
                   <br />
 
                   <input type="file" id="file1" placeholder="" formControlName="Quote1"
-                    style="border: solid #244688; border-radius: 5px; " accept=".pdf"
+                    style="border: solid #244688; border-radius: 5px; max-width: 247px;" accept=".pdf"
                     (change)="onFile1UploadApproved($event)" required>
 
                 </mat-card-content>
@@ -241,7 +241,7 @@
                     <br />
 
                     <input type="file" id="file1" placeholder="" formControlName="OtherQuote1"
-                      style="border: solid #244688; border-radius: 5px; " accept=".pdf" (change)="onFile1Upload($event)"
+                      style="border: solid #244688; border-radius: 5px; max-width: 247px;" accept=".pdf" (change)="onFile1Upload($event)"
                       required>
                     <br>
                     <mat-hint id="Error1" style="color: red; display: none;">
@@ -263,7 +263,7 @@
                     <br />
 
                     <input type="file" id="file2" placeholder="" formControlName="OtherQuote2"
-                      style="border: solid #244688; border-radius: 5px; " accept=".pdf" (change)="onFile2Upload($event)"
+                      style="border: solid #244688; border-radius: 5px; max-width: 247px;" accept=".pdf" (change)="onFile2Upload($event)"
                       required>
                     <br>
                     <mat-hint id="Error2" style="color: red; display: none;">
@@ -280,7 +280,7 @@
                     <br />
 
                     <input type="file" id="file3" placeholder="" formControlName="OtherQuote3"
-                      style="border: solid #244688; border-radius: 5px; " accept=".pdf" (change)="onFile3Upload($event)"
+                      style="border: solid #244688; border-radius: 5px; max-width: 247px;" accept=".pdf" (change)="onFile3Upload($event)"
                       required>
                     <br>
                     <mat-hint id="Error3" style="color: red; display: none;">
