--- a/Frontend/src/app/edit-help/edit-help/edit-help.component.html
+++ b/Frontend/src/app/edit-help/edit-help/edit-help.component.html
@@ -49,7 +49,7 @@
                   <label style=" color:black;">Help Video:</label>
                   <br />
 
-                  <input type="file" id="file" placeholder=""  style="border: solid #244688; border-radius: 5px; "
+                  <input type="file" id="file" placeholder=""  style="border: solid #244688; border-radius: 5px; max-width: 247px;"
                          accept="video/*" (change)="onVideoFileUpload($event)" >
 
                 </mat-card-content>
@@ -59,7 +59,7 @@
                       <label style=" color:black;">User Manual:</label>
                       <br />
     
-                      <input type="file" id="file" placeholder=""  style="border: solid #244688; border-radius: 5px; "
+                      <input type="file" id="file" placeholder=""  style="border: solid #244688; border-radius: 5px; max-width: 247px;"
                              accept=".pdf" (change)="onPDFFileUpload($event)" >
     
                     </mat-card-content>
