--- a/Frontend/src/app/finalize-procurement-request-create/finalize-procurement-request-create.component.html
+++ b/Frontend/src/app/finalize-procurement-request-create/finalize-procurement-request-create.component.html
@@ -50,7 +50,7 @@
                     <br />
                     <input type="file" class="file-upload" formControlName="ProofOfPaymentDoc"
                       (change)="uploadFile(0,$event)"
-                      style="border: solid #244688; border-radius: 5px;height: fit-content; ">
+                      style="border: solid #244688; border-radius: 5px; height: fit-content; max-width: 247px;">
                   </mat-expansion-panel>
                 </mat-card-content>
               </td>
