--- a/Frontend/src/app/import-allocation/import-allocation.component.html
+++ b/Frontend/src/app/import-allocation/import-allocation.component.html
@@ -11,7 +11,7 @@
             <label style=" color:black; margin-top: 5px;">Allocation to Upload:</label>
             <br />
             <input type="file" id="file1" placeholder="" formControlName="File"
-                style="border: solid #244688; border-radius: 5px; " accept=".xlsx" (change)="onFile1Upload($event)"
+                style="border: solid #244688; border-radius: 5px; max-width: 247px;" accept=".xlsx" (change)="onFile1Upload($event)"
                 required>
             <div mat-dialog-actions style="margin-top: 10px;">
                 <div class="wrapper">
