--- a/Frontend/src/app/onboard_request/request-create/request-create.component.html
+++ b/Frontend/src/app/onboard_request/request-create/request-create.component.html
@@ -52,7 +52,7 @@
         <tr>
           <td><label for="file" style="margin-right: 1%;">Company Quote: </label></td>
           <td>  
-                <input id="file" type="file" class="file-upload" formControlName="CompanyQuote" (change)="onFileUpload(i,$event)">
+                <input id="file" type="file" class="file-upload" formControlName="CompanyQuote" (change)="onFileUpload(i,$event)" style="max-width: 247px;">
           </td>
         </tr>
       <br>
@@ -132,7 +132,7 @@
             <tr>
               <td><label for="file" style="margin-right: 1%;">Company Quote: </label></td>
               <td>
-                <input id="file" type="file" class="file-upload"  formControlName="CompanyQuote" (change)="onFileUpload(0,$event)">
+                <input id="file" type="file" class="file-upload"  formControlName="CompanyQuote" (change)="onFileUpload(0,$event)" style="max-width: 247px;">
               </td>
             </tr>
             <br>
