--- a/Frontend/src/app/upload-invoice/upload-invoice.component.html
+++ b/Frontend/src/app/upload-invoice/upload-invoice.component.html
@@ -6,7 +6,7 @@
                 <div>
                   <h2>Upload an Invoice file</h2>
                   <input type="file" id="FileAdded" placeholder="" formControlName="FileAdded"
-                         style="border: solid #244688; border-radius: 5px; " accept=".pdf"
+                         style="border: solid #244688; border-radius: 5px; max-width: 247px;" accept=".pdf"
                          (change)="onFileUpload($event)" required>
                 </div>
                 <div style="margin-top: 10px;">
