--- a/Frontend/src/app/upload-payement-file/upload-payement-file.component.html
+++ b/Frontend/src/app/upload-payement-file/upload-payement-file.component.html
@@ -7,7 +7,7 @@
           <div>
             <h2 style="margin-left: 25px;">Upload a Receipt file</h2>
             <input type="file" id="FileAdded" placeholder="" formControlName="FileAdded"
-              style="border: solid #244688; border-radius: 5px; " accept=".pdf" (change)="onFileUpload($event)"
+              style="border: solid #244688; border-radius: 5px; max-width: 247px;" accept=".pdf" (change)="onFileUpload($event)"
               required>
           </div>
 
@@ -32,7 +32,7 @@
           <div>
 
             <input type="file" id="file" placeholder="" formControlName="FileAdded"
-              style="border: solid #244688; border-radius: 5px; align-items: center;" accept=".pdf"
+              style="border: solid #244688; border-radius: 5px; align-items: center; max-width: 247px;" accept=".pdf"
               (change)="onFileUpload($event)" required>
           </div>
 
