--- a/Frontend/src/app/create-help/create-help/create-help.component.html
+++ b/Frontend/src/app/create-help/create-help/create-help.component.html
@@ -50,7 +50,7 @@
                     <label style=" color:black;">Help Video:</label>
                     <br />
 
-                    <input type="file" id="file" placeholder="" formControlName="video" style="border: solid #244688; border-radius: 5px; "
+                    <input type="file" id="file" placeholder="" formControlName="video" style="border: solid #244688; border-radius: 5px; max-width: 247px;"
                            accept="video/*" (change)="onVideoFileUpload($event)" required>
 
                   </mat-card-content>
@@ -61,7 +61,7 @@
                     <label style=" color:black;">User Manual:</label>
                     <br />
 
-                    <input type="file" id="file" placeholder="" formControlName="user_Manual" style="border: solid #244688; border-radius: 5px; "
+                    <input type="file" id="file" placeholder="" formControlName="user_Manual" style="border: solid #244688; border-radius: 5px; max-width: 247px;"
                            accept=".pdf" (change)="onPDFFileUpload($event)" required>
 
                   </mat-card-content>
