--- a/Frontend/src/app/onboard_request/request-update/request-update.component.html
+++ b/Frontend/src/app/onboard_request/request-update/request-update.component.html
@@ -43,7 +43,7 @@
         <tr>
           <td><label for="file" style="margin-right: 1%;">New Company Quote: </label></td>
           <td >  
-            <input id="file" type="file" class="file-upload" formControlName="CompanyQuote"  (change)="onFileUpload(i,$event)">
+            <input id="file" type="file" class="file-upload" formControlName="CompanyQuote"  (change)="onFileUpload(i,$event)" style="max-width: 247px;">
           </td>
       </tr>
       <br>
@@ -144,7 +144,7 @@
             <tr>
               <td><label for="file" style="margin-right: 1%;">New Company Quote: </label></td>
               <td>
-                <input id="file" type="file" class="file-upload"  formControlName="CompanyQuote" (change)="onFileUpload(0,$event)">
+                <input id="file" type="file" class="file-upload"  formControlName="CompanyQuote" (change)="onFileUpload(0,$event)" style="max-width: 247px;">
               </td>
             </tr>
             <br>
