--- a/Frontend/src/app/view-budget-allocation/view-budget-allocation.component.html
+++ b/Frontend/src/app/view-budget-allocation/view-budget-allocation.component.html
@@ -51,34 +51,34 @@
 
         <ng-container matColumnDef="department">
           <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> Department </th>
-          <td mat-cell *matCellDef="let BudgetAllocations">{{BudgetAllocations.department.name}}</td>
+          <td mat-cell *matCellDef="let row">{{row.department.name}}</td>
         </ng-container>
         <ng-container matColumnDef="date">
           <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> Date Created </th>
-          <td mat-cell *matCellDef="let BudgetAllocations">
+          <td mat-cell *matCellDef="let row">
             {{
-            BudgetAllocations.date_Created |
+            row.date_Created |
             date:"dd/MM/yyyy"
             }}
           </td>
         </ng-container>
         <ng-container matColumnDef="year">
           <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> Year </th>
-          <td mat-cell *matCellDef="let BudgetAllocations">{{BudgetAllocations.year}}</td>
+          <td mat-cell *matCellDef="let row">{{row.year}}</td>
         </ng-container>
         <ng-container matColumnDef="total">
           <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> Total </th>
-          <td mat-cell *matCellDef="let BudgetAllocations">
-            {{BudgetAllocations.total | currency:'ZAR':'symbol-narrow'}}
+          <td mat-cell *matCellDef="let row">
+            {{row.total | currency:'ZAR':'symbol-narrow'}}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="lines">
           <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let BudgetAllocations" style="width:100px;">
+          <td mat-cell *matCellDef="let row" style="width:100px;">
             <button mat-raised-button
               matTooltip="This will take you to the view budegt lines page where you can create edit or delete budget lines for this specific Budget Allocation"
-              routerLink="/ViewBudgetLines/{{BudgetAllocations.budget_ID}}"
+              routerLink="/ViewBudgetLines/{{row.budget_ID}}"
               style="margin-right: 5%; display: flex; align-items: center; font-weight: bold; width: 135px; margin-top: 0.5%; background-color: #94CC5B;"
               type="button">
               Budget Lines
@@ -88,10 +88,10 @@
 
         <ng-container matColumnDef="export">
           <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let BudgetAllocations" style="width:100px;">
+          <td mat-cell *matCellDef="let row" style="width:100px;">
             <button mat-raised-button
               matTooltip="This will allow you to Export this specific Budget Allocation With all its Budget Lines into a Excel file that will donwload on your device."
-              (click)="exportExcel(BudgetAllocations.budget_ID, BudgetAllocations.department.name)"
+              (click)="exportExcel(row.budget_ID, row.department.name)"
               style="margin-right: 5%; display: flex; align-items: center; font-weight: bold; width: 157px; margin-top: 0.5%; background-color: #94CC5B;"
               type="button">
               Export to Excell
@@ -101,9 +101,9 @@
 
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let BudgetAllocations" style="width:100px;">
+          <td mat-cell *matCellDef="let row" style="width:100px;">
 
-            <button class="noselect" routerLink="/EditBudgetAllocation/{{BudgetAllocations.budget_ID}}" type="button"
+            <button class="noselect" routerLink="/EditBudgetAllocation/{{row.budget_ID}}" type="button"
               style="background-color: #94CC5B;">
               <span class='text'>Edit</span>
               <span class="icon" style="border-left: 1px solid #94CC5B; ">
@@ -124,9 +124,9 @@
         </ng-container>
         <ng-container matColumnDef="delete">
           <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let BudgetAllocations" style="width:140px;">
+          <td mat-cell *matCellDef="let row" style="width:140px;">
 
-            <button class="noselect" (click)="DeleteBudgetAllocation(BudgetAllocations.budget_ID)">
+            <button class="noselect" (click)="DeleteBudgetAllocation(row.budget_ID)">
               <span class='text'>Delete</span>
               <span class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
