--- a/Frontend/src/app/edit-employee/edit-employee.component.html
+++ b/Frontend/src/app/edit-employee/edit-employee.component.html
@@ -72,7 +72,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td style="width:100%;">
+                  <td id="RoleExists" style="width:100%;">
                     <mat-card-content>
                       <label style=" color:black;">Role:</label>
                       <br />
@@ -85,7 +85,19 @@
                       </mat-form-field>
                     </mat-card-content>
                   </td>
-                  <td style="width:100%;">
+
+                  <td id="noRoleExists" style="width:100%; display: none">
+                    <mat-card-content>
+                      <label style=" color:black;">Role:</label>
+                      <br />
+                      <mat-form-field>
+                        <mat-select formControlName="Role" placeholder="No role exists on the system" required>
+                        </mat-select>
+                      </mat-form-field>
+                    </mat-card-content>
+                  </td>
+
+                  <td id="MandateExists" style="width:100%;">
                     <mat-card-content>
                       <label style=" color:black;">Mandate Limit:</label>
                       <br />
@@ -99,9 +111,91 @@
                       </mat-form-field>
                     </mat-card-content>
                   </td>
+
+                  <td id="noMandateExists" style="width:100%; display: none">
+                    <mat-card-content>
+                      <label style=" color:black;">Mandate Limit:</label>
+                      <br />
+                      <mat-form-field>
+                        <mat-select formControlName="Mandate" placeholder="No mandate limit exists on the system" required>
+                        </mat-select>
+                      </mat-form-field>
+                    </mat-card-content>
+                  </td>
                 </tr>
+
                 <tr>
-                  <td style="width:100%;">
+
+                  <td id="BranchExists" style="width:100%;">
+                    <mat-card-content>
+                      <label style=" color:black;">Branch:</label>
+                      <br />
+                      <mat-form-field>
+                        <mat-label>Choose one</mat-label>
+                        <mat-select formControlName="Branch" required (selectionChange)='getBranch($event.value)'>
+                          <mat-option *ngFor="let branch of branches" [value]="branch.branch_ID">{{branch.name}}</mat-option>
+                        </mat-select>
+                        <mat-error *ngIf="myError('Branch', 'required')">Please choose a branch</mat-error>
+                      </mat-form-field>
+                    </mat-card-content>
+                  </td>
+
+                  <td id="noBranchExists" style="width:100%; display: none">
+                    <mat-card-content>
+                      <label style=" color:black;">Branch:</label>
+                      <br />
+                      <mat-form-field>
+                        <mat-select formControlName="Branch" placeholder="No branch exists on the system" required>
+                        </mat-select>
+                      </mat-form-field>
+                    </mat-card-content>
+                  </td>
+
+                  <td id="noBranchSelected" style="width: 100%; display: none">
+                    <mat-card-content>
+                      <label style=" color:black;">Department:</label>
+                      <br />
+                      <mat-form-field>
+                        <mat-select formControlName="Department" placeholder="No branch selected" required>
+                        </mat-select>
+                      </mat-form-field>
+                    </mat-card-content>
+                  </td>
+
+                  <td id="noDepartmentExists" style="width:100%; display: none">
+                    <mat-card-content>
+                      <label style=" color:black;">Department:</label>
+                      <br />
+                      <mat-form-field>
+                        <mat-select formControlName="Department" placeholder="No department exists on the system" required>
+                        </mat-select>
+                      </mat-form-field>
+                    </mat-card-content>
+                  </td>
+
+                  <td id="BranchSelected" style="width:100%;">
+                    <mat-card-content>
+                      <div style="display: flex; text-align: left; justify-content: left; align-items: flex-start; ">
+                        <label style=" color: black;">
+                          Department:
+                        </label>
+                        <mat-icon aria-hidden="false" aria-label="add" fontIcon="add" style="color: black; cursor: pointer; font-size: 15pt; width: 20px; height: 20px; " (click)="DynamicDepartmentCreate()"></mat-icon>
+                      </div>
+
+                      <mat-form-field>
+                        <mat-label>Choose one</mat-label>
+                        <mat-select formControlName="Department" required>
+                          <mat-option>---</mat-option>
+                          <mat-optgroup [label]="selectedBranch" [disabled]="selectedBranch.disabled" style="color: white; background-color: #244688;">
+                            <mat-option *ngFor="let dep of departments" [value]="dep.department_ID">{{dep.name}}</mat-option>
+                          </mat-optgroup>
+                        </mat-select>
+                        <mat-error *ngIf="myError('Department', 'required')">Please choose a department</mat-error>
+                      </mat-form-field>
+                    </mat-card-content>
+                  </td>
+
+                  <!--<td style="width:100%;">
                     <mat-card-content>
                       <label style=" color:black;">Department:</label>
                       <br />
@@ -113,20 +207,7 @@
                         <mat-error *ngIf="myError('Department', 'required')">Please choose a department</mat-error>
                       </mat-form-field>
                     </mat-card-content>
-                  </td>
-                  <td style="width:100%;">
-                    <mat-card-content>
-                      <label style=" color:black;">Branch:</label>
-                      <br />
-                      <mat-form-field>
-                        <mat-label>Choose one</mat-label>
-                        <mat-select formControlName="Branch" required>
-                          <mat-option *ngFor="let branch of branches" [value]="branch.branch_ID">{{branch.name}}</mat-option>
-                        </mat-select>
-                        <mat-error *ngIf="myError('Branch', 'required')">Please choose a branch</mat-error>
-                      </mat-form-field>
-                    </mat-card-content>
-                  </td>
+                  </td>-->
                 </tr>
               </table>
 
